Added authMiddleware, JWT token parsing; Closed APIs have been added to the annotations.
